--- a/CSS/signUp.css
+++ b/CSS/signUp.css
@@ -4,13 +4,14 @@
 }
 
 #formContainer {
-    margin-left: 88px !important;
+    margin-left: 96px !important;
 }
 
 /* Sign up form */
 
 #signUpform input {
-    height: 42px;
+    height: 52px;
+    width: 95%;
     font-size: initial;
     padding: 5px;
     background: #FFFFFF;
@@ -26,23 +27,15 @@ label {
     margin: 21px 0px 12px 0px;
 }
 
-#email,
-#contactNumber {
-    width: 598px !important;
-}
 
-#firstName,
-#lastName {
-    margin-right: 32px;
-    width: 279px;
+#signUpform {
+    width: 600px;
 }
 
 #signUpform button {
     height: 42px;
-    width: 40%;
-    margin-right: 32px;
-    margin-left: 13px;
-    font-size: 2.4em;
+    width: 45%;
+    font-size: 2em;
     font-weight: 700;
     padding: 2px;
     border-radius: 6px;
@@ -53,6 +46,14 @@ label {
     display: flex;
 }
 
+.lName,.fName{
+    width: 50%;
+}
+
+#firstName, #lastName{
+    width: 90% !important;
+}
+
 #selectOne {
     margin: 24px 0px 10px 0px;
     font-size: 24px;
@@ -60,19 +61,19 @@ label {
 }
 
 .optionHolder {
-    height: 72px;
-    width: 598px;
+    height: 52px;
+    width: 95%;
     align-items: center;
     display: flex;
     justify-content: space-evenly;
     background: #FFFFFF;
-    border-radius: 15px;
+    border-radius: 13px;
     border: 1px solid #DB6516;
 }
 
 #breeder {
     background: linear-gradient(89.17deg, #DB6516 0%, #E37D0E 100%);
-    border-radius: 15px 0px 0px 15px;
+    border-radius: 13px 0px 0px 13px;
     box-shadow: 0px 10px 20px rgba(227, 125, 14, 0.3);
 }
 
@@ -81,7 +82,7 @@ label {
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 24px;
+    font-size: 20px;
     font-weight: 700;
     height: 100%;
     width: 50%;
@@ -100,6 +101,8 @@ label {
 .buttonContainer {
     display: flex;
     margin-top: 64px;
+    width: 95%;
+    justify-content: space-between;
 }
 
 #backTologin {
