--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ h1 {
 }
 
 label {
-    font-size: 2.4em;
+    font-size: 2.1em;
     color: rgba(105, 97, 97, 1);
     font-weight: 600;
 }
@@ -87,7 +87,6 @@ label {
 #signUp {
     font-size: 3.6em;
     margin-top: -12px;
-    margin-bottom: 20px;
     font-weight: 700;
 }
 
@@ -119,7 +118,7 @@ a:hover {
     width: 100%;
     height: 52px;
     border-radius: 15px;
-    font-size: 2.4em;
+    font-size: 2em;
     padding: 3px;
     font-weight: 700;
 }
@@ -130,7 +129,7 @@ button:hover {
 }
 
 #forgotPass {
-    font-size: 2em;
+    font-size: 1.7em;
     margin: 13px 0px 24px 0px;
     justify-content: flex-end;
     font-weight: 600;
@@ -138,7 +137,7 @@ button:hover {
 
 #notRegistered {
     justify-content: start;
-    font-size: 2.4em;
+    font-size: 1.7em;
     margin: 10px 0px 32px 0px;
     font-weight: 600;
     color: #335232;
@@ -160,7 +159,7 @@ button:hover {
 #otpSignIn {
     color: #727272;
     font-weight: 400;
-    font-size: 20px;
+    font-size: 17px;
 }
 
 .line {
